@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2001-2003 by egnite Software GmbH. All rights reserved.
+# Copyright (C) 2001-2005 by egnite Software GmbH. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -32,79 +32,47 @@
 # For additional information see http://www.ethernut.de/
 #
 # $Log$
-# Revision 1.5  2004/04/07 12:13:46  haraldkipp
-# Matthias Ringwald's *nix emulation added
+# Revision 1.6  2005/04/08 15:20:46  olereinhardt
+# added <sys/types.h> (__APPLE__) and <netinet/in.h> (__linux__)
+# for htons and simmilar.
 #
-# Revision 1.4  2004/03/16 16:48:24  haraldkipp
-# Added Jan Dubiec's H8/300 port.
+# Revision 1.7  2005/01/22 19:12:31  haraldkipp
+# Added C++ support contributed by Oliver Schulz (MPI).
 #
-# Revision 1.3  2003/11/03 17:41:14  haraldkipp
-# Added assembler defs
+# Revision 1.6  2004/11/08 21:43:10  drsung
+# Step back to version 1.4
 #
-# Revision 1.2  2003/10/13 10:19:35  haraldkipp
-# Added hardware defs
+# Revision 1.4  2004/09/10 17:18:25  haraldkipp
+# Building inside source tree is working again
 #
-# Revision 1.1.1.1  2003/05/09 14:40:23  haraldkipp
-# Initial using 3.2.1
+# Revision 1.3  2004/09/08 10:17:44  haraldkipp
+# Listing in local dir
 #
-# Revision 1.3  2003/01/14 13:18:56  harald
-# Added mods
+# Revision 1.2  2004/08/18 16:20:21  haraldkipp
+# Use consistent directory structure
 #
-# Revision 1.2  2002/10/31 16:19:54  harald
-# Mods by troth for Linux
-#
-# Revision 1.1  2002/08/16 17:57:59  harald
-# Imagecraft environment added
-#
-# Revision 1.8  2002/07/03 16:45:38  harald
-# Using GCC 3.2
-#
-# Revision 1.7  2002/06/04 18:41:08  harald
-# New make environment
-#
-# Revision 1.6  2002/05/08 16:02:25  harald
-# First Imagecraft compilation
-#
-# Revision 1.5  2002/04/20 12:52:18  harald
-# ATmega 128 support
-#
-# Revision 1.4  2002/03/29 12:36:59  harald
-# no message
-#
-# Revision 1.3  2001/09/01 18:16:11  harald
-# Back to optimization level 3
-#
-# Revision 1.2  2001/05/27 20:11:34  harald
-# New device structure implemented
-#
-# Revision 1.1  2001/05/19 12:31:29  harald
-# First check in
+# Revision 1.1  2004/08/18 13:27:37  haraldkipp
+# Copied from .gcc
 #
 #
-
-include $(top_srcdir)/UserConf.mk
 
 DEFS  = $(HWDEF)
-#DEFS = -DNUTDEBUG $(HWDEF)
-#DEFS = -DNUT_CPU_FREQ=14745600 $(HWDEF)
-#DEFS = -DNUT_CPU_FREQ=3686400 $(HWDEF)
 
-LIBDIR = $(top_srcdir)/lib/gcc/$(MCU)
+INCPRE = -I
 INCDIR = $(top_srcdir)/include
 
-MODDIR = $(top_srcdir)/mod
-MODINC = $(MODDIR)/include
-
+ARCH   = avr
 TRGT   = avr-
 CC     = $(TRGT)gcc
+CXX    = $(TRGT)g++
 AR     = $(TRGT)ar
 CP     = cp
 AS     = $(TRGT)gcc -x assembler-with-cpp
 RANLIB = $(TRGT)ranlib
 
-MCFLAGS = -mmcu=$(MCU)
-CPFLAGS = $(MCFLAGS) -Os -Wall -Werror -Wstrict-prototypes -Wa,-ahlms=$(<:.c=.lst) $(DEFS)
-#CPFLAGS = -g $(MCFLAGS) -O1 -Wall -Wstrict-prototypes -Wa,-ahlms=$(<:.c=.lst) $(DEFS)
-LDFLAGS = $(MCFLAGS) -Wl,-Map=$(PROJ).map,--cref
-ARFLAGS = rsv
-ASFLAGS = $(MCFLAGS) -Wa,-amhls=$(<:.S=.lst) $(DEFS)
+MCFLAGS  = -mmcu=$(MCU)
+CPFLAGS  = $(MCFLAGS) -Os -Wall -Werror -Wstrict-prototypes -Wa,-ahlms=$(<F:.c=.lst) $(DEFS)
+CXXFLAGS = $(MCFLAGS) -Os -Wall -Werror -Wa,-ahlms=$(<F:.cc=.lst) $(DEFS)
+LDFLAGS  = $(MCFLAGS) -Wl,-Map=$(PROJ).map,--cref
+ARFLAGS  = rsv
+ASFLAGS  = $(MCFLAGS) -Wa,-amhls=$(<:.S=.lst) $(DEFS)
