@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2001 by egnite Software GmbH. All rights reserved.
+# Copyright (C) 2001-2005 by egnite Software GmbH. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -32,28 +32,41 @@
 # For additional information see http://www.ethernut.de/
 #
 # $Log$
-# Revision 1.1  2003/05/09 14:40:23  haraldkipp
-# Initial revision
+# Revision 1.2  2005/04/08 15:20:46  olereinhardt
+# added <sys/types.h> (__APPLE__) and <netinet/in.h> (__linux__)
+# for htons and simmilar.
 #
-# Revision 1.2  2003/01/14 13:22:04  harald
-# Added mods
+# Revision 1.6  2005/01/22 19:13:08  haraldkipp
+# Added C++ support contributed by Oliver Schulz (MPI).
 #
-# Revision 1.1  2002/08/16 17:57:59  harald
-# Imagecraft environment added
+# Revision 1.5  2004/11/08 21:43:54  drsung
+# Added rule to clean also intermediate files (*.i)
 #
-# Revision 1.2  2002/06/04 18:41:01  harald
-# New make environment
+# Revision 1.4  2004/09/08 10:22:06  haraldkipp
+# Assembler rule added
 #
-# Revision 1.1  2001/05/19 12:31:29  harald
-# First check in
+# Revision 1.3  2004/08/18 16:21:27  haraldkipp
+# Use consistent directory structure
+#
+# Revision 1.2  2004/08/18 15:36:33  haraldkipp
+# Phony target clean divided
+#
+# Revision 1.1  2004/08/18 13:27:37  haraldkipp
+# Copied from .gcc
 #
 #
 
 %o : %c
-	$(CC) -c $(CPFLAGS) -I$(MODINC) -I$(INCDIR) $< -o $@
+	$(CC) -c $(CPFLAGS) $(INCFIRST) -I$(INCDIR) $(INCLAST) $< -o $@
+
+%o : %cc
+	$(CXX) -c $(CXXFLAGS) $(INCFIRST) -I$(INCDIR) $(INCLAST) $< -o $@
+
+%o : %S
+	$(AS) -c $(ASFLAGS) $< -o $@
 
 %s : %c
-	$(CC) -S $(CPFLAGS) -I$(MODINC) -I$(INCDIR) $< -o $@
+	$(CC) -S $(CPFLAGS) -I$(INCDIR) $< -o $@
 
 %elf: $(OBJS)
 	$(CC) $(OBJS) $(LIB) $(LDFLAGS) -o $@
@@ -61,9 +74,22 @@
 %obj: %elf
 	$(BIN) -O avrobj $< $@
 
-%rom: %elf
-	$(BIN) -O srec $< $@
-
 %eep: %elf
 	$(BIN) -j .eeprom --set-section-flags=.eeprom="alloc,load" -O srec $< $@
 
+%a: $(OBJS)
+	$(AR) $(ARFLAGS) $@ $?
+
+.PHONY: cleancc
+cleancc:
+	-rm -f $(OBJS)
+	-rm -f $(TARG)
+	-rm -f $(SRCS:.c=.lst)
+	-rm -f $(SRCS:.c=.lis)
+	-rm -f $(SRCS:.c=.s)
+	-rm -f $(SRCS:.c=.i)
+
+.PHONY: cleanedit
+cleanedit:
+	-rm -f $(SRCS:.c=.bak)
+	-rm -f $(SRCS:.c=.c~)
