@@ -93,8 +93,12 @@
 
 /*
  * $Log$
- * Revision 1.1  2003/05/09 14:41:27  haraldkipp
- * Initial revision
+ * Revision 1.2  2005/04/08 15:20:50  olereinhardt
+ * added <sys/types.h> (__APPLE__) and <netinet/in.h> (__linux__)
+ * for htons and simmilar.
+ *
+ * Revision 1.1.1.1  2003/05/09 14:41:27  haraldkipp
+ * Initial using 3.2.1
  *
  * Revision 1.11  2003/03/31 11:54:51  harald
  * Avoid including PPP code unless required
@@ -111,11 +115,11 @@
 
 #include <sys/heap.h>
 #include <sys/thread.h>
-
+#include <sys/types.h>
 #include <net/if_var.h>
 #include <netinet/if_ether.h>
 #include <net/ether.h>
-
+#include <netinet/in.h>
 /*!
  * \addtogroup xgARP
  */
