@@ -33,6 +33,10 @@
 
 /*
  * $Log$
+ * Revision 1.4  2005/04/08 15:20:51  olereinhardt
+ * added <sys/types.h> (__APPLE__) and <netinet/in.h> (__linux__)
+ * for htons and simmilar.
+ *
  * Revision 1.3  2004/03/08 11:27:24  haraldkipp
  * Accept incoming header compression.
  *
@@ -48,13 +52,13 @@
  */
 
 #include <net/netdebug.h>
-
+#include <sys/types.h>
 #include <dev/ahdlc.h>
 
 #include <arpa/inet.h>
 #include <netinet/ppp_fsm.h>
 #include <netinet/if_ppp.h>
-
+#include <netinet/in.h>
 FILE *__ppp_trs;                /*!< \brief PPP trace output stream. */
 u_char __ppp_trf;               /*!< \brief PPP trace flags. */
 
