@@ -64,6 +64,10 @@
 
 /*
  * $Log$
+ * Revision 1.6  2005/04/08 15:20:51  olereinhardt
+ * added <sys/types.h> (__APPLE__) and <netinet/in.h> (__linux__)
+ * for htons and simmilar.
+ *
  * Revision 1.5  2004/03/18 15:36:09  haraldkipp
  * ICCAVR failed to compile
  *
@@ -90,11 +94,12 @@
 #include <dev/ppp.h>
 #include <dev/ahdlc.h>
 
+#include <netinet/in.h>
 #include <netinet/if_ppp.h>
 #include <netinet/ppp_fsm.h>
 #include <netinet/ip.h>
 #include <net/ppp.h>
-
+#include <sys/types.h>
 #include <sys/timer.h>
 
 #ifdef NUTDEBUG
